--- a/async_requests.ipynb
+++ b/async_requests.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "57ea6319",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "fad5707a",
    "metadata": {},
    "outputs": [
@@ -23,23 +23,90 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--- 0.8670508861541748 seconds ---\n"
+      "--- 10.193920612335205 seconds ---\n",
+      "<!doctype html><html lang=\"da-DK\" prefix=\"og: https://ogp.me/ns#\"><head><meta charset=\"UTF-8\"><meta \n"
      ]
     }
    ],
    "source": [
     "def sync_magenta():\n",
-    "    r = requests.get('http://magenta.dk')\n",
-    "    return [r for x in range(10)]\n",
+    "    url = 'http://magenta.dk'\n",
+    "    return [requests.get(url) for x in range(10)]\n",
     "\n",
     "start_time = time.time()\n",
-    "sync_func()\n",
-    "print(\"--- %s seconds ---\" % (time.time() - start_time))"
+    "magenta = sync_magenta()\n",
+    "print(\"--- %s seconds ---\" % (time.time() - start_time))\n",
+    "print(magenta[0].text[:100])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
+   "id": "13a1234c",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- 8.0182363986969 seconds ---\n",
+      "<!doctype html><html lang=\"da-DK\" prefix=\"og: https://ogp.me/ns#\"><head><meta charset=\"UTF-8\"><meta \n"
+     ]
+    }
+   ],
+   "source": [
+    "async def get_magenta(session, url):\n",
+    "    async with session.get(url) as res:\n",
+    "        magenta = await res.text()\n",
+    "        return magenta\n",
+    "\n",
+    "async def async_magenta():\n",
+    "    async with aiohttp.ClientSession() as session:\n",
+    "        url = 'http://magenta.dk'\n",
+    "        tasks = [asyncio.ensure_future(get_magenta(session, url)) \n",
+    "                 for x in range(10)]\n",
+    "\n",
+    "        magenta_reqs = await asyncio.gather(*tasks)\n",
+    "        return [magenta for magenta in magenta_reqs]\n",
+    "\n",
+    "start_time = time.time()            \n",
+    "magenta = await async_magenta()\n",
+    "print(\"--- %s seconds ---\" % (time.time() - start_time))\n",
+    "print(magenta[0][:100])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "35aa5d6d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- 15.452149629592896 seconds ---\n",
+      "['bulbasaur', 'ivysaur', 'venusaur', 'charmander', 'charmeleon', 'charizard', 'squirtle', 'wartortle', 'blastoise', 'caterpie']\n"
+     ]
+    }
+   ],
+   "source": [
+    "def sync_pokemon():\n",
+    "    url = 'https://pokeapi.co/api/v2/pokemon/'\n",
+    "    return [requests.get(url + str(x)).json()['name'] \n",
+    "            for x in range(1, 151)]\n",
+    "\n",
+    "start_time = time.time()\n",
+    "pokemon = sync_pokemon()\n",
+    "print(\"--- %s seconds ---\" % (time.time() - start_time))\n",
+    "print(pokemon[:10])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "43941cbf",
    "metadata": {},
    "outputs": [
@@ -47,14 +114,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--- 1.4259531497955322 seconds ---\n"
+      "--- 1.1729869842529297 seconds ---\n",
+      "['bulbasaur', 'ivysaur', 'venusaur', 'charmander', 'charmeleon', 'charizard', 'squirtle', 'wartortle', 'blastoise', 'caterpie']\n"
      ]
     }
    ],
    "source": [
     "async def get_pokemon(session, url):\n",
-    "    async with session.get(url) as resp:\n",
-    "        pokemon = await resp.json()\n",
+    "    async with session.get(url) as res:\n",
+    "        pokemon = await res.json()\n",
     "        return pokemon['name']\n",
     "\n",
     "async def async_pokemon():\n",
@@ -69,20 +137,64 @@
     "\n",
     "start_time = time.time()\n",
     "list_of_pokemon = await async_pokemon()\n",
-    "print(\"--- %s seconds ---\" % (time.time() - start_time))"
+    "print(\"--- %s seconds ---\" % (time.time() - start_time))\n",
+    "print(list_of_pokemon[:10])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "91a2a667",
+   "execution_count": 8,
+   "id": "776ad988",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--- 11.649462938308716 seconds ---\n"
+      "--- 14.902341604232788 seconds ---\n",
+      "# HELP python_gc_objects_collected_total Objects collected during gc\n",
+      "# TYPE python_gc_objects_collected_total counter\n",
+      "python_gc_objects_collected_total{generation=\"0\"} 114435.0\n",
+      "python_gc_objects_collected_total{generation=\"1\"} 28949.0\n",
+      "python_gc_objects_collected_total{generation=\"2\"} 37265.0\n",
+      "# HELP python_gc_objects_uncollectable_total Uncollectable object found during GC\n",
+      "# TYPE python_gc_objects_uncollectable_total counter\n",
+      "python_gc_objects_uncollectable_total{generation=\"0\"} 0.0\n",
+      "python_gc_obje\n"
+     ]
+    }
+   ],
+   "source": [
+    "def sync_metric():\n",
+    "    url = 'http://localhost:5000/metrics'\n",
+    "    return [requests.get(url) for metric in range(25)]\n",
+    "\n",
+    "start_time = time.time()\n",
+    "metrics = sync_metric()\n",
+    "print(\"--- %s seconds ---\" % (time.time() - start_time))\n",
+    "print(metrics[0].text[:500])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "56c38e54",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- 7.803090333938599 seconds ---\n",
+      "# HELP python_gc_objects_collected_total Objects collected during gc\n",
+      "# TYPE python_gc_objects_collected_total counter\n",
+      "python_gc_objects_collected_total{generation=\"0\"} 119664.0\n",
+      "python_gc_objects_collected_total{generation=\"1\"} 31879.0\n",
+      "python_gc_objects_collected_total{generation=\"2\"} 37265.0\n",
+      "# HELP python_gc_objects_uncollectable_total Uncollectable object found during GC\n",
+      "# TYPE python_gc_objects_uncollectable_total counter\n",
+      "python_gc_objects_uncollectable_total{generation=\"0\"} 0.0\n",
+      "python_gc_obje\n"
      ]
     }
    ],
@@ -94,55 +206,23 @@
     "\n",
     "async def async_metric():\n",
     "    async with aiohttp.ClientSession() as session:\n",
-    "        tasks = []\n",
-    "        for x in range(100):\n",
-    "            url = 'http://localhost:5000'\n",
-    "            tasks.append(asyncio.ensure_future(get_metrics(session, url)))\n",
-    "\n",
+    "        url = 'http://localhost:5000/metrics'\n",
+    "        tasks = [asyncio.ensure_future(get_metrics(session, url)) \n",
+    "                 for x in range(25)]\n",
+    "        \n",
     "        metrics = await asyncio.gather(*tasks)\n",
     "        return [metric for metric in metrics]\n",
     "\n",
     "start_time = time.time()            \n",
     "metrics = await async_metric()\n",
-    "print(\"--- %s seconds ---\" % (time.time() - start_time))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "776ad988",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--- 14.056135416030884 seconds ---\n"
-     ]
-    }
-   ],
-   "source": [
-    "def sync_metric():\n",
-    "    url = 'http://localhost:5000'\n",
-    "    return [requests.get(url) for metric in range(100)]\n",
-    "\n",
-    "start_time = time.time()\n",
-    "metrics = sync_metric()\n",
-    "print(\"--- %s seconds ---\" % (time.time() - start_time))"
+    "print(\"--- %s seconds ---\" % (time.time() - start_time))\n",
+    "print(metrics[0][:500])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60aa9c03",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7ef3ad93",
+   "id": "428a5449",
    "metadata": {},
    "outputs": [],
    "source": []
